# noChannelMessageBot

./: .env.example  .gitignore  Cargo.toml  README.md  requirements.txt
bot/: __init__.py
bot/methods/: __init__.py  logToChannel.py
plugins/groups/: banChannelMessage.py  invite.py
plugins/private/: __init__.py  help.py
py/: main.py
py/bot/methods/: logToChannel.py
src/: main.rs
